# flask-serverless-template

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main_app.py  package-lock.json  pyproject.toml  serverless.yml
app/: __init__.py  api.py  config.py  configure_app.py  models.py  utils.py
resources/: app.yml  customs.yml  package.yml
